# desktop-streaming

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
audio-capture/: Cargo.toml
audio-capture/src/: lib.rs  windows.rs
audio-capturer/: Cargo.toml
audio-capturer/src/: lib.rs  util.rs
audio-capturer/src/windows/: audio_format.rs  com_thread.rs  mod.rs  thread_priority.rs  thread_priority_booster.rs
audio-codec/: Cargo.toml  build.rs
audio-codec/src/: codec_traits.rs  decoder.rs  encoder.rs  error.rs  lib.rs  settings.rs  sys.rs
audio-codec/tests/: codec_test.rs
audio-encoder/: Cargo.toml  build.rs
audio-encoder/src/: sys.rs
audio-source/: Cargo.toml
audio-source/src/: audio_data.rs  audio_duplicator.rs  error.rs  lib.rs
audio-source/src/windows/: audio_duplicator.rs  audio_format.rs  mod.rs
client-android/: .gitignore
client-android/app/: build.gradle
client-android/app/src/androidTest/java/com/debug/myapplication/: ExampleInstrumentedTest.kt
client-android/app/src/main/: AndroidManifest.xml
client-android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
client-android/app/src/main/java/com/debug/myapplication/: MainActivity.kt
client-android/app/src/main/res/layout/: activity_main.xml
client-android/app/src/main/res/values/: themes.xml
client-android/app/src/main/rust/: build.rs
client-android/app/src/main/rust/builder/: Cargo.toml
client-android/app/src/main/rust/builder/src/: main.rs
client-android/app/src/main/rust/native/: Cargo.toml
client-android/app/src/main/rust/native/src/: lib.rs  log.rs
client-android/app/src/main/rust/native/src/debug/: .gitignore  mod.rs
client-android/app/src/main/rust/src/: lib.rs  util.rs  window.rs
client-android/app/src/main/rust/src/media/: codec.rs  format.rs  mod.rs  status.rs
client-android/gradle/wrapper/: gradle-wrapper.properties
conveyor-buffer/: Cargo.toml
conveyor-buffer/src/: lib.rs
input-injection/: Cargo.toml
input-injection/src/: lib.rs  windows.rs
inputs/: Cargo.toml
inputs/src/: lib.rs  windows.rs
nvenc/: Cargo.toml
nvenc-sys/: Cargo.toml  build.rs  nvEncodeAPI.h
nvenc-sys/headers/10_0/: nvEncodeAPI.h
nvenc-sys/src/: ffi.rs
nvenc-windows/: Cargo.toml  build.rs
nvenc-windows/regex/: .gitignore  fntable.txt  join.py  regex.py  signatures.txt
nvenc-windows/src/: error.rs  ffi.rs  guids.rs  init.rs  lib.rs  output.rs  queries.rs  util.rs
nvenc-windows/src/encoder/: buffer.rs  config.rs  init.rs  input.rs  mod.rs  output.rs  queries.rs  raw.rs
nvenc-windows/src/os/: mod.rs  windows.rs
nvenc-windows/src/os/windows/: direct3d.rs  event.rs  format.rs  library.rs  mod.rs  texture.rs
nvenc-windows/src/settings/: mod.rs
nvenc-windows/src/sync/: cache_aligned.rs  cyclic_buffer.rs  mod.rs  ring_buffer.rs
nvenc/regex/: output.txt  regex.py
nvenc/src/: error.rs  lib.rs  sys.rs  util.rs
nvenc/src/encoder/: buffer.rs  buffer_items.rs  builder.rs  config.rs  config_v2.rs  encoder_input.rs  encoder_output.rs  library.rs  mod.rs  output.rs  queries.rs  raw.rs  raw_encoder.rs  shared.rs
nvenc/src/encoder/device/: mod.rs  windows.rs
nvenc/src/encoder/event/: mod.rs  non_windows.rs  windows.rs
nvenc/src/encoder/shared/: mod.rs
nvenc/src/encoder/shared/sync/: cache_aligned.rs  cyclic_buffer.rs  mod.rs
nvenc/src/encoder/texture/: mod.rs  windows.rs
nvenc/src/error/: error_strings.rs  mod.rs
nvenc/src/os/windows/: direct3d.rs  event.rs  format.rs  library.rs  mod.rs
nvenc/src/settings/: guids.rs  mod.rs
nvenc/src/sync/: cache_aligned.rs  cyclic_buffer.rs
roundabout-buffer/: Cargo.toml
roundabout-buffer/src/: lib.rs
roundabout_buffer/: Cargo.toml
roundabout_buffer/src/: lib.rs
server-windows/: Cargo.toml
server-windows/src/: capture.rs  device.rs  input.rs  main.rs  server.rs  signaler.rs  texture_buffer.rs
server-windows/src/html/: index.html  not_found.html
server-windows/src/input/: mod.rs  pointer.rs
server-windows/src/nvidia/: builder.rs  encoder.rs  mod.rs
server-windows/src/payloader/: mod.rs
server-windows/src/payloader/nalus/: 2.h264  4.h264  5.h264  6.h264  7.h264
spsc/: Cargo.toml
spsc/src/: cache_aligned.rs  cyclic_buffer.rs  lib.rs  reader.rs  writer.rs
src/: capture.rs  device.rs  main.rs  server.rs
src/encoder/: builder.rs  encoder.rs  mod.rs  payloader.rs
src/encoder/payloader/: mod.rs
src/html/: index.html
src/input/: mod.rs  pointer.rs
src/nvidia/: encoder.rs  mod.rs
src/payloader/: mod.rs
src/payloader/nalus/: 0.h264  8.h264  9.h264
video-source/: Cargo.toml
video-source/src/: error.rs  lib.rs
video-source/src/windows/: display_duplicator.rs  mod.rs
webrtc-bridge/: Cargo.toml  README.md
webrtc-bridge/src/: decoder.rs  lib.rs  peer.rs  signaling.rs
webrtc-bridge/src/codecs/: mod.rs
webrtc-bridge/src/codecs/av1/: mod.rs
webrtc-bridge/src/codecs/h264/: constants.rs  depacketizer.rs  mod.rs  parameter_set.rs  profile.rs  sample_sender.rs
webrtc-bridge/src/codecs/h264/nalus/: 1.h264  3.h264
webrtc-bridge/src/codecs/h265/: constants.rs  depacketizer.rs  mod.rs  sample_sender.rs
webrtc-bridge/src/codecs/util/: depacketizer.rs  ext_traits.rs  mod.rs  nalu_chunks.rs  unsafe_buf.rs
webrtc-bridge/src/encoder/: mod.rs  track.rs
webrtc-bridge/src/interceptor/: mod.rs
webrtc-bridge/src/interceptor/twcc/: interceptor.rs  mod.rs  sender.rs  sync.rs  time.rs
webrtc-bridge/src/interceptor/twcc/estimator/: loss_based.rs  mod.rs
webrtc-bridge/src/interceptor/twcc/estimator/delay_based/: history.rs  mod.rs  overuse_detector.rs  packet_group.rs
webrtc-bridge/src/network/: data_rate.rs  reorder_buffer.rs
webrtc-bridge/src/util/: mod.rs  reorder_buffer.rs
webrtc-bridge/tests/: mock.rs
webrtc-bridge/tests/codec/: mod.rs
webrtc-bridge/tests/decoder/: mod.rs
webrtc-bridge/tests/encoder/: mod.rs
webrtc-bridge/tests/signaling/: mod.rs
windows-reexport/: Cargo.toml
windows-reexport/src/: lib.rs
windows-util/: Cargo.toml
windows-util/src/: com_thread.rs  lib.rs  thread_priority.rs
(+3 files in other folders)
