[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Joseph Rafael Ferrer <rafael2x0@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = [
    "audio-codec",
    "audio-source",
    "conveyor-buffer",
    "input-injection",
    "windows-util",
]
exclude = ["windows-reexport"]

[workspace.dependencies]
approx = "0.5.1"
bitflags = "2.4.1"
rand = "0.8.5"
rodio = "0.17.3"
serde = "1.0.192"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
windows = { package = "windows-reexport", path = "windows-reexport" } # version = "0.52.0"
