[package]
name = "audio-codec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["has_audio_output_device"]
has_audio_output_device = []

[dependencies]
thiserror = { workspace = true }

[build-dependencies]
cmake = "0.1.50"
bindgen = "0.68.1"

[dev-dependencies]
rand = { workspace = true }
rodio = { workspace = true }