[package]
name = "input-injection"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bitflags = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["UI_Input_Preview_Injection"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
