[package]
name = "input-injection"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bitflags = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Gaming_Input",
    "UI_Input_Preview_Injection",
] }

[target.'cfg(windows)'.dev-dependencies]
rusty-xinput = "1.2.1"
