[package]
name = "nvenc"
version = "0.1.0"
edition = "2021"

[build-dependencies]
regex = "1.6.0"
lazy_static = "1.4.0"

[dependencies]
nvenc-sys = { path = "../nvenc-sys", features = ["v11_1"] }
thiserror = "1.0.31"

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc", # For conversion of &str to PCSTR 
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Security_WinTrust",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming"
]
