[package]
name = "server-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
nvenc-windows = { path = "../nvenc-windows" }
crossbeam-channel = "0.5"

[dependencies.windows]
version = "0.37"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Performance",
    "Win32_UI_HiDpi"
]